--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,6 @@
 	"license": "GPL3",
 	"require":{
 		"infrajs/ans":"~1",
-		"infrajs/nostore":"~1",
-		"infrajs/path":"~1",
-		"infrajs/config":"~1"
+		"infrajs/nostore":"~1"
 	}
 }
